--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -3,6 +3,14 @@ name: Create Repo
 on:
   workflow_dispatch:
     inputs:
+      author:
+        required: true
+        type: string
+        description: Repo Owner
+      email:
+        required: true
+        type: string
+        description: Email Address
       choice:
         type: choice
         description: Type of Repo
@@ -17,7 +25,22 @@ jobs:
   create-repo:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Set up Python 3.8.0
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8.0
+
+      - name: Install cookiecutter
+        run: |
+          pip3 install cookiecutter
+
+      - name: Cookiecutter Populate
+        run: |
+          if ${{ inputs.choice }} == "Training Pipeline"; then echo "Training Pipeline"; fi
+          if ${{ inputs.choice }} == "Deploy ML Lambda Function"; then echo "Deploy ML Lambda Function"; fi
+          if ${{ inputs.choice }} == "Deploy ML Webserver"; then echo "Deploy ML Webserver"; fi
+          if ${{ inputs.choice }} == "Deploy ML Batch Process"; then echo "Deploy ML Batch Process"; fi
+          if ${{ inputs.choice }} == "Feature Store"; then echo "Feature Store"; fi
 
       - name: Greet
         id: greet
