--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Cookiecutter Populate
         run: |
-          [["${{ inputs.choice }}" == "Training Pipeline"]] && then echo "Training Pipeline"
+          [["${{ inputs.choice }}" == "Training Pipeline"]] && echo "Training Pipeline"
           [["${{ inputs.choice }}" == "Deploy ML Lambda Function"]] && echo "Deploy ML Lambda Function"
           [["${{ inputs.choice }}" == "Deploy ML Webserver"]] && echo "Deploy ML Webserver"
           [["${{ inputs.choice }}" == "Deploy ML Batch Process"]] && echo "Deploy ML Batch Process"
