--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -36,11 +36,11 @@ jobs:
 
       - name: Cookiecutter Populate
         run: |
-          [["${{ inputs.choice }}" == "Training Pipeline"]] && echo "Training Pipeline"
-          [["${{ inputs.choice }}" == "Deploy ML Lambda Function"]] && echo "Deploy ML Lambda Function"
-          [["${{ inputs.choice }}" == "Deploy ML Webserver"]] && echo "Deploy ML Webserver"
-          [["${{ inputs.choice }}" == "Deploy ML Batch Process"]] && echo "Deploy ML Batch Process"
-          [["${{ inputs.choice }}" == "Feature Store"]] && echo "Feature Store"
+          [['${{ inputs.choice }}' == 'Training Pipeline']] && echo "Training Pipeline"
+          [['${{ inputs.choice }}' == 'Deploy ML Lambda Function']] && echo "Deploy ML Lambda Function"
+          [['${{ inputs.choice }}' == 'Deploy ML Webserver']] && echo "Deploy ML Webserver"
+          [['${{ inputs.choice }}' == 'Deploy ML Batch Process']] && echo "Deploy ML Batch Process"
+          [['${{ inputs.choice }}' == 'Feature Store']] && echo "Feature Store"
 
       - name: Greet
         id: greet
