--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -34,13 +34,13 @@ jobs:
         run: |
           pip3 install cookiecutter
 
-      # - name: Cookiecutter Populate
-      #   run: |
-      #     '${{ inputs.choice }}' == 'Training Pipeline' && echo "Training Pipeline"
-      #     '${{ inputs.choice }}' == 'Deploy ML Lambda Function' && echo "Deploy ML Lambda Function"
-      #     '${{ inputs.choice }}' == 'Deploy ML Webserver' && echo "Deploy ML Webserver"
-      #     '${{ inputs.choice }}' == 'Deploy ML Batch Process' && echo "Deploy ML Batch Process"
-      #     '${{ inputs.choice }}' == 'Feature Store' && echo "Feature Store"
+      - name: Cookiecutter Populate
+        run: |
+          if [[ '${{ inputs.choice }}' == 'Training Pipeline' ]]; then echo "Training Pipeline"; fi
+          if [[ '${{ inputs.choice }}' == 'Deploy ML Lambda Function' ]]; then echo "Deploy ML Lambda Function"; fi
+          if [[ '${{ inputs.choice }}' == 'Deploy ML Webserver' ]]; then echo "Deploy ML Webserver": fi
+          if [[ '${{ inputs.choice }}' == 'Deploy ML Batch Process' ]]; then echo "Deploy ML Batch Process": fi
+          if [[ '${{ inputs.choice }}' == 'Feature Store' ]]; then echo "Feature Store"; fi
 
       - name: Greet
         id: greet
